# slaist

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  check-setup.sh  config.toml.example  demo.sh  example-output.md  post-to-slack.sh  rust-toolchain.toml
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs  slack_post.rs
slack/: Cargo.toml
slack/src/: lib.rs
src/: main.rs  todoist.rs
todoist/: Cargo.toml  README.md
todoist/examples/: fetch_todos.rs
todoist/src/: lib.rs
todoist/tests/: integration_test.rs
